istio/example/egress-gateway/curl.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: istio-example2
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
