istio/example/egress-gateway/istio-egressgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["172.31.14.140"],"port":31444,"protocol":"TCP","serviceName":"istio-system:istio-egressgateway","allNodes":true},{"addresses":["172.31.14.140"],"port":30773,"protocol":"TCP","serviceName":"istio-system:istio-egressgateway","allNodes":true}]'
  creationTimestamp: "2024-08-08T08:19:33Z"
  labels:
    app: istio-egressgateway
    install.operator.istio.io/owning-resource: installed-state
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: egressgateway
    istio.io/rev: default
    operator.istio.io/component: EgressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.21.1
    release: istio
  name: istio-egressgateway
  namespace: istio-system
  resourceVersion: "15670881"
  uid: 8990c2fb-c7c2-4a00-82b4-987485ebf80c
spec:
  clusterIP: 10.43.60.225
  clusterIPs:
  - 10.43.60.225
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http2
    nodePort: 31444
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30773
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: mongo
    port: 7777
    protocol: TCP
    targetPort: 7777
  selector:
    app: istio-egressgateway
    istio: egressgateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
