istio/example/egress-gateway/egress-gateway-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-test
  namespace: istio-example2
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: yjlee
