istio/example/egress-gateway/egress-gateway-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: test-se
  namespace: istio-example2
spec:
  hosts:
  - egress.my.ghlee
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
