istio/example/egress-gateway/egress-gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-yjlee-through-egress-gateway
  namespace: istio-example2
spec:
  hosts:
  - egress.my.ghlee
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: yjlee
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: egress.my.ghlee
        port:
          number: 80
      weight: 100
